Jang/spore hunts boss (#5960)